--- a/prueba.html
+++ b/prueba.html
@@ -98,7 +98,7 @@
                 <br>
                 <br>
                 <ol>
-                    <li>Google_buscador</li>
+                    <li><a href="http://www.google.es">Google_buscador</a></li>
                     <li>Google Maps</li>
                     <li>Ayto de Oviedo
                         <br>
