--- a/prueba.html
+++ b/prueba.html
@@ -25,41 +25,25 @@
             background-attachment: scroll; 
             background-position: top left; 
         }
-        .silex-id-1478365730879-6 {
+        .silex-id-1478370149689-19 {
             min-height: 100px; 
             top: 100px; 
             left: NaNpx; 
         }
-        .silex-id-1478365730878-5 {
+        .silex-id-1478370149689-18 {
             min-height: 100px; 
-            background-color: transparent; 
+            background-color: rgb(255, 255, 255); 
         }
-        .silex-id-1478365755031-8 {
+        .silex-id-1478370181591-21 {
             min-height: 100px; 
-            width: 915px; 
-            top: -5px; 
-            left: 72px; 
-            background-color: transparent; 
-            opacity: 0.3; 
-        }
-        .silex-id-1478366501669-9 {
-            min-height: 283px; 
-            width: 417px; 
-            background-color: rgba(255,183,109,1); 
-            top: 173px; 
-            left: 394px; 
-            opacity: 0.5; 
-        }
-        .silex-id-1478366603731-13 {
-            min-height: 196px; 
-            width: 326px; 
-            top: 8px; 
-            left: 41px; 
+            width: 100px; 
+            top: 1px; 
+            left: 162px; 
         }
     </style>
     <title></title>
     <script class="silex-json-styles" type="text/javascript">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)","background-image":"url('../img/Universidad%20de%20Oviedo.jpg')","background-size":"auto","background-repeat":"no-repeat","background-attachment":"scroll","background-position":"top left"},"silex-id-1474394621033-3":{"min-height":"600px","top":"0px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"170px","top":"600px","left":"0px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"},"silex-id-1478364532760-1":{"min-height":"603px","width":"1189px","top":"-55px","left":"2px"},"silex-id-1478364599117-2":{"min-height":"598px","width":"945px","background-color":"rgb(255, 255, 255)","top":"-1px","left":"10px"},"silex-id-1478364619563-3":{"min-height":"1553px","width":"1402px","top":"5px","left":"3px"},"silex-id-1478365498655-4":{"min-height":"172px","width":"813px","top":"56px","left":"11px"},"silex-id-1478365730878-5":{"min-height":"100px","background-color":"transparent"},"silex-id-1478365730879-6":{"min-height":"100px","top":"100px","left":"NaNpx"},"silex-id-1478365741828-7":{"min-height":"204px","width":"341px","top":"-4px","left":"549px"},"silex-id-1478365755031-8":{"min-height":"100px","width":"915px","top":"-5px","left":"72px","background-color":"transparent","opacity":"0.3"},"silex-id-1478366501669-9":{"min-height":"283px","width":"417px","background-color":"rgba(255,183,109,1)","top":"173px","left":"394px","opacity":"0.5"},"silex-id-1478366531243-10":{"min-height":"100px","width":"100px","top":"100px","left":"897px"},"silex-id-1478366587910-11":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1478366587912-12":{"min-height":"100px","top":"100px","left":"NaNpx"},"silex-id-1478366603731-13":{"min-height":"196px","width":"326px","top":"8px","left":"41px"},"silex-id-1478369393460-14":{"min-height":"98px","width":"96px","top":"202px","left":"32px"},"silex-id-1478369806004-15":{"min-height":"371px","width":"332px","background-color":"rgb(255, 255, 255)","top":"224px","left":"160px"}},"mobile":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)","background-image":"url('../img/Universidad%20de%20Oviedo.jpg')","background-size":"cover","background-repeat":"no-repeat","background-attachment":"scroll","background-position":"top left"},"silex-id-1474394621033-3":{"min-height":"600px","top":"0px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"170px","top":"600px","left":"0px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"},"silex-id-1478364532760-1":{"min-height":"603px","width":"1189px","top":"-55px","left":"2px"},"silex-id-1478364599117-2":{"min-height":"598px","width":"945px","background-color":"rgb(255, 255, 255)","top":"-1px","left":"10px"},"silex-id-1478364619563-3":{"min-height":"1553px","width":"1402px","top":"5px","left":"3px"},"silex-id-1478365498655-4":{"min-height":"172px","width":"813px","top":"56px","left":"11px"},"silex-id-1478365730878-5":{"min-height":"100px","background-color":"transparent"},"silex-id-1478365730879-6":{"min-height":"100px","top":"100px","left":"NaNpx"},"silex-id-1478365741828-7":{"min-height":"204px","width":"341px","top":"-4px","left":"549px"},"silex-id-1478365755031-8":{"min-height":"100px","width":"915px","top":"-5px","left":"72px","background-color":"transparent","opacity":"0.3"},"silex-id-1478366501669-9":{"min-height":"283px","width":"417px","background-color":"rgba(255,183,109,1)","top":"173px","left":"394px","opacity":"0.5"},"silex-id-1478366531243-10":{"min-height":"100px","width":"100px","top":"100px","left":"897px"},"silex-id-1478366587910-11":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1478366587912-12":{"min-height":"100px","top":"100px","left":"NaNpx"},"silex-id-1478366603731-13":{"min-height":"196px","width":"326px","top":"8px","left":"41px"},"silex-id-1478369393460-14":{"min-height":"98px","width":"96px","top":"202px","left":"32px"},"silex-id-1478369806004-15":{"min-height":"371px","width":"332px","background-color":"rgb(255, 255, 255)","top":"224px","left":"160px"},"silex-id-1478370100616-16":{"min-height":"100px","background-color":"rgb(255, 255, 255)","opacity":"1"},"silex-id-1478370100618-17":{"min-height":"100px","top":"100px","left":"NaNpx","opacity":"0"},"silex-id-1478370149689-18":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1478370149689-19":{"min-height":"100px","top":"100px","left":"NaNpx"},"silex-id-1478370160859-20":{"min-height":"100px","width":"100px","top":"1px","left":"123px"},"silex-id-1478370181591-21":{"min-height":"100px","width":"100px","top":"1px","left":"162px"}},"mobile":{}}]
     </script>
     <style id="current-page-style">
         .page-page-1{display:inherit; }
@@ -85,27 +69,10 @@
 
 
 
-    <div style="" data-silex-id="silex-id-1478365730879-6" class="prevent-draggable container-element editable-style silex-id-1478365730879-6 section-element" data-silex-type="container">
-        <div data-silex-id="silex-id-1478365730878-5" class="editable-style silex-element-content default-site-width silex-id-1478365730878-5 silex-container-content container-element prevent-draggable" data-silex-type="container"></div>
-    </div>
-    <div style="" data-silex-id="silex-id-1478365755031-8" class="editable-style silex-id-1478365755031-8 text-element" data-silex-type="text">
-        <div class="silex-element-content normal"><font size="6"><span style="font-family: Bree Serif;"><span style="background-color: rgb(255, 0, 0);"><br></span></span></font>
-            <div style="text-align: center;">
-                <h1><font size="6"><span style="font-family: Bree Serif;"><span style="background-color: rgb(255, 0, 0);"><span class="heading1" style="background-color: rgb(255, 255, 255);">PÁGINA DE PRUEBA PARA WEB DE<span></span> AURORA CON S<span></span>ILEX</span></span></span></font></h1></div>
-        </div>
-    </div>
-    <div style="" data-silex-id="silex-id-1478366501669-9" class="editable-style silex-id-1478366501669-9 container-element page-page-1 paged-element" data-silex-type="container">
-        <div style="" data-silex-id="silex-id-1478366603731-13" class="editable-style silex-id-1478366603731-13 text-element page-page-1 paged-element" data-silex-type="text">
-            <div class="silex-element-content normal">Enlaces a paginas web de interes:
-                <br>
-                <br>
-                <ol>
-                    <li><a href="http://www.google.es">Google_buscador</a></li>
-                    <li>Pagina 2</li>
-                    <li>Ayto de Oviedo
-                        <br>
-                    </li>
-                </ol>
+    <div style="" data-silex-id="silex-id-1478370149689-19" class="prevent-draggable container-element editable-style silex-id-1478370149689-19 section-element page-page-1 paged-element" data-silex-type="container">
+        <div data-silex-id="silex-id-1478370149689-18" class="editable-style silex-element-content default-site-width silex-id-1478370149689-18 silex-container-content container-element prevent-draggable" data-silex-type="container">
+            <div style="" data-silex-id="silex-id-1478370181591-21" class="editable-style silex-id-1478370181591-21 text-element" data-silex-type="text">
+                <div class="silex-element-content normal">Medicina</div>
             </div>
         </div>
     </div>
