--- a/prueba.html
+++ b/prueba.html
@@ -52,6 +52,7 @@
         .page-page-1{display:inherit; }
     </style>
     <meta data-silex-viewport="" content="width=device-width, initial-scale=1, maximum-scale=2.2" name="viewport">
+    <meta content="/api/1.0/github/exec/put//maestro/master" name="publicationPath">
     <!-- Silex HEAD tag do not remove -->
     <!-- End of Silex HEAD tag do not remove -->
 </head>
