--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
     </div>
-    <div style="" data-silex-id="silex-id-1478372367390-27" class="prevent-draggable container-element editable-style silex-id-1478372367390-27 section-element page-page-1 paged-element" data-silex-type="container">
+    <div style="" data-silex-id="silex-id-1478372367390-27" class="prevent-draggable container-element editable-style silex-id-1478372367390-27 section-element" data-silex-type="container">
         <a href="#!page-pagina2" data-silex-id="silex-id-1478372367390-26" class="editable-style silex-element-content default-site-width silex-id-1478372367390-26 silex-container-content container-element prevent-draggable" data-silex-type="container">
             </a><div style="" data-silex-id="silex-id-1478372395630-28" class="editable-style silex-id-1478372395630-28 text-element" data-silex-type="text"><a href="#!page-pagina2" data-silex-id="silex-id-1478372367390-26" class="editable-style silex-element-content default-site-width silex-id-1478372367390-26 silex-container-content container-element prevent-draggable" data-silex-type="container">
                 </a><div class="silex-element-content normal"><a href="#!page-pagina2" data-silex-id="silex-id-1478372367390-26" class="editable-style silex-element-content default-site-width silex-id-1478372367390-26 silex-container-content container-element prevent-draggable" data-silex-type="container"></a><a href="http://medicinaysalud.uniovi.es/"><font size="2">FACULTAD DE MEDICINA</font></a>
